# Template

./: .gitignore  9pts.cpp  CMakeLists.txt  HEAD.cpp  Print.h  README.md  clean.sh  contents.tex  generate_contents.py  main.aux  main.out  main.tex  main.toc  mcpp.sh  run_tests.sh
DataStruct/: 2d_diff_array.cpp  2d_pref_sum.cpp  Chtholly.cpp  CountColor.cpp  Count_2D_Points.cpp  DSU.cpp  DSU.hpp  DSU_.hpp  Fenwick.hpp  Hash.cpp  LazySegmentTree.cpp  LazySegmentTreeMul.cpp  Matrix.cpp  MinMax.hpp  NearestPointPair.cpp  PointDivideAndConquer2.cpp  RollbackDSU.hpp  Segtree.cpp  SegtreeNoneRecursive.cpp  Segtree_Info.cpp  Segtree_lazy.cpp  Segtree_lazy_Info.cpp  SparseTable.cpp  Trie01.cpp  Trie01.hpp  count_inversion.cpp  dsu_on_tree.cpp  fenwick.cpp  fhq-Treap.cpp  pref_sum.cpp  segment_tree3.cpp  带权并查集.cpp  轻重链剖分.cpp
DataStruct/Tree/: 主席树.cpp  (+1 more)
Geometry/: Circle.cpp  HalfPlane.cpp  Line.cpp  Point.cpp  PolygonAndConvex.cpp  Triangle.cpp
Graph/: 2sat.cpp  Cut.cpp  Cut_Point.cpp  Directed_MST.cpp  Graph.cpp  HLD.cpp  HopcroftKarp.cpp  KuhnMunkres.cpp  MaxAssignment.cpp  Mincost.cpp  SCC.cpp  Tree.cpp  bipartitematching.cpp  circle3count.cpp  dijkstra.cpp  dinic.cpp  eulerian_trails_directed.cpp  eulerian_trails_undirected.cpp  find_cycle.cpp  graph_segment.cpp  spfa.cpp  treeHash.cpp  二分图匹配.cpp  二分图匹配2.cpp  二分图匹配_匈牙利.cpp  二分图带权匹配.cpp  匈牙利.cpp
Others/: BigNum2.cpp  Simulated_annealing.cpp  Z.cpp  Z.hpp  bignum.cpp  gen.py  interval_merging.cpp  longest_ascending_subsequence.cpp  makestd.cpp  pai.py  sg函数.cpp  tree_bag.cpp  博弈.cpp  威佐夫博弈.cpp  杜教BM.cpp  模拟退火.cpp  欧拉函数.cpp
String/: AhoCorasick.cpp  PolyHash.cpp  PolyHash_wu.cpp  SuffixArray.cpp  ac_auto.cpp  ac_auto2.cpp  exkmp.cpp  kmp.cpp  manacher.cpp  min_represent.cpp  trie.cpp  后缀数组.cpp
Tree/: HLD.cpp
docs/: test_problems.md
dp/: 数位dp.cpp  最长上升子序列.cpp
math/: China.cpp  Comb.cpp  Euler_sieve.cpp  Euler_sieve_simple.cpp  FFT.cpp  Fib.cpp  Lagrange.cpp  Lucas.cpp  Matrix.cpp  Miller-Rabin.cpp  NTT.cpp  Pollard_Rho.cpp  basic.cpp  binom.cpp  cantor.cpp  exCRT.cpp  exEuler.cpp  exgcd.cpp  exgcd.hpp  gauss.cpp  xor_basis.cpp  公式.md  取模gauss.cpp  容斥.cpp  异或gauss.cpp  斐波那契.cpp  求逆元.cpp  第二类斯特林数.cpp  线性基类.cpp  除法分块.cpp
misc/: Digit_dp.cpp  Simulated_annealing.cpp
poly/: FFT.cpp  Lagrange1.cpp
(+573 files in other folders)
